--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -9,7 +9,7 @@
                         <p class="card-text description">{{this.description}}</p>
                         <div class="clearfix">
                             <div class="price float-left mt-2">${{this.price}}</div>
-                            <a href="/add-to-cart/" class="btn btn-success float-right">Buy</a>
+                            <a href="/add-to-cart/{{this._id}}" class="btn btn-success float-right">Buy</a>
                         </div>
                     </div>
                 </div>
