--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,9 +7,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/shopping-cart">
           <i class="fa fa-shopping-cart"></i> Shopping cart
-          <span class="badge">{{session.cart.totalQty}}</span>
+          <span class="badge badge-secondary">{{session.cart.totalQty}}</span>
           <span class="sr-only">(current)</span>
         </a>
       </li>
